ext/psip/build_master_log_2.txt
[  1%] Building CXX object CMakeFiles/SipPlatform.dir/SipPlatform/Directory.cpp.o
[  1%] Building CXX object CMakeFiles/SipPlatform.dir/SipPlatform/DeadLockDetectMutex.cpp.o
[  2%] Building CXX object CMakeFiles/SipPlatform.dir/SipPlatform/FileLog.cpp.o
[  2%] Building CXX object CMakeFiles/SipPlatform.dir/SipPlatform/FileUtility.cpp.o
[  4%] Building CXX object CMakeFiles/SipPlatform.dir/SipPlatform/MonitorString.cpp.o
[  4%] Building CXX object CMakeFiles/SipPlatform.dir/SipPlatform/Log.cpp.o
[  4%] Building CXX object CMakeFiles/SipPlatform.dir/SipPlatform/Random.cpp.o
[ 18%] Built target opensrtp
[ 18%] Building CXX object CMakeFiles/SipPlatform.dir/SipPlatform/ServerUtility.cpp.o
[ 19%] Building CXX object CMakeFiles/SipPlatform.dir/SipPlatform/SipMd5.cpp.o
[ 20%] Building CXX object CMakeFiles/SipPlatform.dir/SipPlatform/SipTcp.cpp.o
[ 20%] Building CXX object CMakeFiles/SipPlatform.dir/SipPlatform/SipUdp.cpp.o
[ 20%] Building CXX object CMakeFiles/SipPlatform.dir/SipPlatform/StringUtility.cpp.o
[ 21%] Building CXX object CMakeFiles/SipPlatform.dir/SipPlatform/TimeString.cpp.o
[ 22%] Building CXX object CMakeFiles/SipPlatform.dir/SipPlatform/TimeUtility.cpp.o
[ 22%] Linking CXX static library libSipPlatform.a
[ 24%] Built target SipPlatform
[ 25%] Built target XmlParser
[ 29%] Built target HttpParser
[ 32%] Built target StunParser
[ 37%] Built target SdpParser
[ 37%] Building CXX object CMakeFiles/SipParser.dir/SipParser/SipAcceptData.cpp.o
[ 38%] Building CXX object CMakeFiles/SipParser.dir/SipParser/SipCSeq.cpp.o
[ 39%] Building CXX object CMakeFiles/SipParser.dir/SipParser/SipCallId.cpp.o
[ 40%] Building CXX object CMakeFiles/SipParser.dir/SipParser/SipContentType.cpp.o
[ 47%] Built target TcpStack
[ 49%] Built target HttpStack
[ 50%] Linking CXX static library libSipParser.a
[ 56%] Built target SipParser
[ 71%] Built target SipStack
[ 71%] Building CXX object CMakeFiles/TestWebRtcVideo.dir/TestWebRtcVideo/main_linux.cpp.o
[ 73%] Building CXX object CMakeFiles/TestWebRtcVideo.dir/TestWebRtcVideo/H264Decoder.cpp.o
[ 76%] Built target ServerPlatform
[ 77%] Building CXX object CMakeFiles/SipSend.dir/SipSend/Setup.cpp.o
[ 77%] Building CXX object CMakeFiles/SipUserAgent.dir/SipUserAgent/RtpDirection.cpp.o
[ 77%] Building CXX object CMakeFiles/ServerMonitor.dir/ServerMonitor/ServerMonitor/ChildFrm.cpp.o
In file included from /mnt/c/Users/nex/Desktop/work/cIMS/media/cims/ext/psip/TestWebRtcVideo/H264Decoder.cpp:20:
/mnt/c/Users/nex/Desktop/work/cIMS/media/cims/ext/psip/TestWebRtcVideo/H264Decoder.h:23:10: fatal error: codec_api.h: No such file or directory
   23 | #include "codec_api.h"
      |          ^~~~~~~~~~~~~
In file included from /mnt/c/Users/nex/Desktop/work/cIMS/media/cims/ext/psip/TestWebRtcVideo/main_linux.cpp:1:
/mnt/c/Users/nex/Desktop/work/cIMS/media/cims/ext/psip/TestWebRtcVideo/H264Decoder.h:23:10: fatal error: codec_api.h: No such file or directory
   23 | #include "codec_api.h"
      |          ^~~~~~~~~~~~~
compilation terminated.
compilation terminated.
gmake[2]: *** [CMakeFiles/TestWebRtcVideo.dir/build.make:76: CMakeFiles/TestWebRtcVideo.dir/TestWebRtcVideo/main_linux.cpp.o] Error 1
gmake[2]: *** Waiting for unfinished jobs....
gmake[2]: *** [CMakeFiles/TestWebRtcVideo.dir/build.make:90: CMakeFiles/TestWebRtcVideo.dir/TestWebRtcVideo/H264Decoder.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:681: CMakeFiles/TestWebRtcVideo.dir/all] Error 2
gmake[1]: *** Waiting for unfinished jobs....
[ 78%] Building CXX object CMakeFiles/SipSend.dir/SipSend/SipSend.cpp.o
[ 78%] Building CXX object CMakeFiles/SipUserAgent.dir/SipUserAgent/SipCdr.cpp.o
In file included from /mnt/c/Users/nex/Desktop/work/cIMS/media/cims/ext/psip/SipSend/Setup.cpp:19:
/mnt/c/Users/nex/Desktop/work/cIMS/media/cims/ext/psip/SipSend/StdAfx.h:25:10: fatal error: afxwin.h: No such file or directory
   25 | #include <afxwin.h>         // MFC core and standard components
      |          ^~~~~~~~~~
compilation terminated.
gmake[2]: *** [CMakeFiles/SipSend.dir/build.make:76: CMakeFiles/SipSend.dir/SipSend/Setup.cpp.o] Error 1
gmake[2]: *** Waiting for unfinished jobs....
[ 78%] Building CXX object CMakeFiles/SipUserAgent.dir/SipUserAgent/SipDialog.cpp.o
In file included from /mnt/c/Users/nex/Desktop/work/cIMS/media/cims/ext/psip/ServerMonitor/ServerMonitor/ChildFrm.cpp:19:
/mnt/c/Users/nex/Desktop/work/cIMS/media/cims/ext/psip/ServerMonitor/ServerMonitor/stdafx.h:38:10: fatal error: afxwin.h: No such file or directory
   38 | #include <afxwin.h>         // MFC 핵심 및 표준 구성 요소입니다.
      |          ^~~~~~~~~~
compilation terminated.
gmake[2]: *** [CMakeFiles/ServerMonitor.dir/build.make:76: CMakeFiles/ServerMonitor.dir/ServerMonitor/ServerMonitor/ChildFrm.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:610: CMakeFiles/ServerMonitor.dir/all] Error 2
[ 80%] Building CXX object CMakeFiles/SipUserAgent.dir/SipUserAgent/SipRegisterThread.cpp.o
[ 80%] Building CXX object CMakeFiles/EchoSipServer.dir/EchoSipServer/EchoSipServer.cpp.o
In file included from /mnt/c/Users/nex/Desktop/work/cIMS/media/cims/ext/psip/SipSend/SipSend.cpp:19:
/mnt/c/Users/nex/Desktop/work/cIMS/media/cims/ext/psip/SipSend/stdafx.h:25:10: fatal error: afxwin.h: No such file or directory
   25 | #include <afxwin.h>         // MFC core and standard components
      |          ^~~~~~~~~~
compilation terminated.
gmake[2]: *** [CMakeFiles/SipSend.dir/build.make:90: CMakeFiles/SipSend.dir/SipSend/SipSend.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:538: CMakeFiles/SipSend.dir/all] Error 2
[ 80%] Building CXX object CMakeFiles/EchoSipServer.dir/EchoSipServer/EchoSipServerSetup.cpp.o
In file included from /mnt/c/Users/nex/Desktop/work/cIMS/media/cims/ext/psip/EchoSipServer/EchoSipServer.cpp:20:
/mnt/c/Users/nex/Desktop/work/cIMS/media/cims/ext/psip/EchoSipServer/SipServer.h:22:10: fatal error: SipUserAgent.h: No such file or directory
   22 | #include "SipUserAgent.h"
      |          ^~~~~~~~~~~~~~~~
compilation terminated.
gmake[2]: *** [CMakeFiles/EchoSipServer.dir/build.make:90: CMakeFiles/EchoSipServer.dir/EchoSipServer/EchoSipServer.cpp.o] Error 1
gmake[2]: *** Waiting for unfinished jobs....
[ 80%] Building CXX object CMakeFiles/SipUserAgent.dir/SipUserAgent/SipServerInfo.cpp.o
[ 80%] Linking CXX executable SimpleSipServer
[ 81%] Linking CXX executable SipLoadBalancer
[ 83%] Built target SimpleSipServer
[ 84%] Building CXX object CMakeFiles/SipUserAgent.dir/SipUserAgent/SipUserAgent.cpp.o
[ 85%] Building CXX object CMakeFiles/SipUserAgent.dir/SipUserAgent/SipUserAgentCallBack.cpp.o
[ 88%] Built target SipLoadBalancer
gmake[1]: *** [CMakeFiles/Makefile2:430: CMakeFiles/EchoSipServer.dir/all] Error 2
In file included from /mnt/c/Users/nex/Desktop/work/cIMS/media/cims/ext/psip/SipUserAgent/SipUserAgent.cpp:33:
/mnt/c/Users/nex/Desktop/work/cIMS/media/cims/ext/psip/SipUserAgent/SipUserAgentSend.hpp: In member function ?쁞ool CSipUserAgent::SendNotify(const char*, int)??
/mnt/c/Users/nex/Desktop/work/cIMS/media/cims/ext/psip/SipUserAgent/SipUserAgentSend.hpp:89:108: error: ?쁆etReasonPhrase??was not declared in this scope; did you mean ?쁓ipGetReasonPhrase??
   89 |                 pclsRequest->m_iContentLength = snprintf( szBuf, sizeof(szBuf), "SIP/2.0 %d %s", iSipCode, GetReasonPhrase( iSipCode ) );
      |                                                                                                            ^~~~~~~~~~~~~~~
      |                                                                                                            SipGetReasonPhrase
gmake[2]: *** [CMakeFiles/SipUserAgent.dir/build.make:146: CMakeFiles/SipUserAgent.dir/SipUserAgent/SipUserAgent.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:574: CMakeFiles/SipUserAgent.dir/all] Error 2
gmake: *** [Makefile:91: all] Error 2
